# MindGraph

./: .gitignore  DECISIONS.md  README.md  pyproject.toml
.antigravity/: hooks.json  settings.json
examples/: README.md
examples/example-vault/: balancing-loops.md  bounded-rationality.md  feedback-loops.md  mental-models-overview.md  reinforcing-loops.md  systems-archetypes.md  unrelated-noise.md
scripts/: run_example_smoke.py
src/mindgraph/: __init__.py  cli.py  db.py  exceptions.py  mcp_server.py  models.py  parser.py  query.py
tests/: test_examples.py  test_expand.py  test_ingest.py  test_mcp.py  test_neighbors.py  test_parser.py  test_query.py
