[project]
name = "mindgraph"
version = "0.1.0"
description = "A Graph-Augmented Personal Knowledge Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
mindgraph = "mindgraph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
